--- a/page3-bs.html
+++ b/page3-bs.html
@@ -74,10 +74,10 @@
                     <div class="container">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7pJJZ3bKCrqhb_jGY2c6u9Ms8BW_zXQY1BUl9i7bdKTwgul098g" alt="uh oh" class="image">
                     <div class="middle">
-                        <div class="text1">
+                        <div class="text">
                             <p> Don't skip class!</p>
                         </div>
-                        <div class="text2">
+                        <div class="text">
                             <p> Get enough sleep!</p>
                         </div>
                     </div>
