--- a/page3-bs.html
+++ b/page3-bs.html
@@ -80,6 +80,9 @@
                         <div class="text">
                             <p> Get enough sleep!</p>
                         </div>
+                        <div class="text">
+                            <p> Ask your friends, classmates, professors, or other for help when needed!</p>
+                        </div>
                     </div>
                     <hr class="light">
             </div>   
