--- a/page1-bs.html
+++ b/page1-bs.html
@@ -31,10 +31,10 @@
                         <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Stress Calculator</a>
+                        <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Page 3</a>
+                        <a class="nav-link" href="./page3-bs.html">Page 3</a>
                     </li>    
 
                 </ul>
@@ -79,9 +79,9 @@
                 <h4>Class Name:</h4>
                 <input type="text" id="className" value="">
                 <h4>Category 1 Grade & Weight:</h4>
-                <input id="g1" value=""> <input  id="p1" value="">
+                <input id="g1" name="grayed" value=""> <input id="p1" name="percy" value="">
                 <h4>Category 2 Grade & Weight:</h4>
-                <input id="g2" value=""> <input id="p2" value="">
+                <input id="g2" name="grayed" value=""> <input id="p2" name="percy" value="">
                 
                 <h4>Final Weight (Optional):</h4>
                 <input id="finalex" value="">
