--- a/page3-bs.html
+++ b/page3-bs.html
@@ -55,12 +55,7 @@
             <div class="col-12">
                 <h1 class="display-4">College Tips</h1>
             </div>   
-            <p class="lead"> Insert introduction here Insert introduction here Insert introduction here Insert introduction here Insert introduction here 
-                    Insert introduction here Insert introduction here Insert introduction here Insert introduction here 
-                    Insert introduction here Insert introduction here Insert introduction here Insert introduction here Insert introduction here Insert introduction here 
-                    Insert introduction here Insert introduction here Insert introduction here Insert introduction here Insert introduction here 
-                    Insert introduction here Insert introduction here Insert introduction here Insert introduction here 
-                    Insert introduction here Insert introduction here Insert introduction here 
+            <p class="lead"> Entering college can seem very daunting and stressful. Students need to find a good balance between academics, extracurriculars, and friends. See below for tips on how to minimize stress and disorder in college!
             </p>
         </div>
         <hr class="light">
