--- a/home-bs.html
+++ b/home-bs.html
@@ -67,11 +67,7 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>Why Coll[a]ge?</h2>
-                <p>Because Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                <p>Are you a stressed, disorganized college student? Have you ever wanted to make your life more structured? Do you want to get your act together? Coll[A]ge is a website made specifically for college students to stay organized and manage their stress levels. Like a jack-of-all-trades, Coll[A]ge provides users with intel on how to calculate their grades, a test to monitor stress levels, tips on surviving college, and more!</p>
                     <hr class="light">
             </div>   
         </div>
