css with stress page

--- a/home-backup/page2.html
+++ b/home-backup/page2.html
@@ -73,6 +73,7 @@
                         <li><input type="radio" name="5" value="5-3"> Fairly Often</li>
                         <li><input type="radio" name="5" value="5-4"> Very Often</li>
                     </form>
+                </div>
                     <br>
                     <button onclick="stressCalc()">Find out your stress level!</button>
                     <p id="x"></p>
