--- a/page2-bs.html
+++ b/page2-bs.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coll[a]ge</title>
+	<title>Coll[A]ge</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -78,99 +78,121 @@
         </div>
 
         <section id="Stress Level Test">
-                <div class="para">
+                <div class="para_stress">
         
                     <h2>See how stressed you are using this stress calculator!</h2>
 
                     <h5>In the last month, how often have you been upset because of something that 
                         happened unexpectedly?</h5>
                     <form>
-                        <input type="radio" name="1" value="1-1"> Never
-                        <input type="radio" name="1" value="1-2"> Almost never
-                        <input type="radio" name="1" value="1-3"> Sometimes
-                        <input type="radio" name="1" value="1-4"> Fairly often
-                        <input type="radio" name="1" value="1-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="1" value="1-1"> Never</li>
+                            <li><input type="radio" name="1" value="1-2"> Almost never</li>
+                            <li><input type="radio" name="1" value="1-3"> Sometimes</li>
+                            <li><input type="radio" name="1" value="1-4"> Fairly often</li>
+                            <li><input type="radio" name="1" value="1-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you felt that you were unable to control the
                         important things in your life?</h5>
                     <form>
-                        <input type="radio" name="2" value="2-1"> Never
-                        <input type="radio" name="2" value="2-2"> Almost never
-                        <input type="radio" name="2" value="2-3"> Sometimes
-                        <input type="radio" name="2" value="2-4"> Fairly Often
-                        <input type="radio" name="2" value="2-5"> Very Often
+                        <ul>
+                            <li><input type="radio" name="2" value="2-1"> Never</li>
+                            <li><input type="radio" name="2" value="2-2"> Almost never</li>
+                            <li><input type="radio" name="2" value="2-3"> Sometimes</li>
+                            <li><input type="radio" name="2" value="2-4"> Fairly Often</li>
+                            <li><input type="radio" name="2" value="2-5"> Very Often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you felt nervous and stressed?</h5>
                     <form>
-                        <input type="radio" name="3" value="3-1"> Never
-                        <input type="radio" name="3" value="3-2"> Almost never
-                        <input type="radio" name="3" value="3-3"> Sometimes
-                        <input type="radio" name="3" value="3-4"> Fairly often
-                        <input type="radio" name="3" value="3-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="3" value="3-1"> Never</li>
+                            <li><input type="radio" name="3" value="3-2"> Almost never</li>
+                            <li><input type="radio" name="3" value="3-3"> Sometimes</li>
+                            <li><input type="radio" name="3" value="3-4"> Fairly often</li>
+                            <li><input type="radio" name="3" value="3-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5> In the last month, how often have you felt confident about your ability to handle
                         your personal problems?</h5>
                     <form>
-                        <input type="radio" name="4" value="4-1"> Never
-                        <input type="radio" name="4" value="4-2"> Almost never
-                        <input type="radio" name="4" value="4-3"> Sometimes
-                        <input type="radio" name="4" value="4-4"> Fairly often
-                        <input type="radio" name="4" value="4-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="4" value="4-1"> Never</li>
+                            <li><input type="radio" name="4" value="4-2"> Almost never</li>
+                            <li><input type="radio" name="4" value="4-3"> Sometimes</li>
+                            <li><input type="radio" name="4" value="4-4"> Fairly often</li>
+                            <li><input type="radio" name="4" value="4-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you felt that things were going your way?</h5>
                     <form>
-                        <input type="radio" name="5" value="5-1"> Never
-                        <input type="radio" name="5" value="5-2"> Almost never
-                        <input type="radio" name="5" value="5-3"> Sometimes
-                        <input type="radio" name="5" value="5-4"> Fairly often
-                        <input type="radio" name="5" value="5-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="5" value="5-1"> Never</li>
+                            <li><input type="radio" name="5" value="5-2"> Almost never</li>
+                            <li><input type="radio" name="5" value="5-3"> Sometimes</li>
+                            <li><input type="radio" name="5" value="5-4"> Fairly often</li>
+                            <li><input type="radio" name="5" value="5-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you found that you could not cope with
                             all the things that you had to do?</h5>
                     <form>
-                        <input type="radio" name="6" value="6-1"> Never
-                        <input type="radio" name="6" value="6-2"> Almost never
-                        <input type="radio" name="6" value="6-3"> Sometimes
-                        <input type="radio" name="6" value="6-4"> Fairly often
-                        <input type="radio" name="6" value="6-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="6" value="6-1"> Never</li>
+                            <li><input type="radio" name="6" value="6-2"> Almost never</li>
+                            <li><input type="radio" name="6" value="6-3"> Sometimes</li>
+                            <li><input type="radio" name="6" value="6-4"> Fairly often</li>
+                            <li><input type="radio" name="6" value="6-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you been able to control irritations in
                         your life?</h5>
                     <form>
-                        <input type="radio" name="7" value="7-1"> Never
-                        <input type="radio" name="7" value="7-2"> Almost never
-                        <input type="radio" name="7" value="7-3"> Sometimes
-                        <input type="radio" name="7" value="7-4"> Fairly often
-                        <input type="radio" name="7" value="7-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="7" value="7-1"> Never</li>
+                            <li><input type="radio" name="7" value="7-2"> Almost never</li>
+                            <li><input type="radio" name="7" value="7-3"> Sometimes</li>
+                            <li><input type="radio" name="7" value="7-4"> Fairly often</li>
+                            <li><input type="radio" name="7" value="7-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you felt that you were on top of things?</h5>
                     <form>
-                        <input type="radio" name="8" value="8-1"> Never
-                        <input type="radio" name="8" value="8-2"> Almost never
-                        <input type="radio" name="8" value="8-3"> Sometimes
-                        <input type="radio" name="8" value="8-4"> Fairly often
-                        <input type="radio" name="8" value="8-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="8" value="8-1"> Never</li>
+                            <li><input type="radio" name="8" value="8-2"> Almost never</li>
+                            <li><input type="radio" name="8" value="8-3"> Sometimes</li>
+                            <li><input type="radio" name="8" value="8-4"> Fairly often</li>
+                            <li><input type="radio" name="8" value="8-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you been angered because of things that
                             happened that were outside of your control?</h5>
                     <form>
-                        <input type="radio" name="9" value="9-1"> Never
-                        <input type="radio" name="9" value="9-2"> Almost never
-                        <input type="radio" name="9" value="9-3"> Sometimes
-                        <input type="radio" name="9" value="9-4"> Fairly often
-                        <input type="radio" name="9" value="9-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="9" value="9-1"> Never</li>
+                            <li><input type="radio" name="9" value="9-2"> Almost never</li>
+                            <li><input type="radio" name="9" value="9-3"> Sometimes</li>
+                            <li><input type="radio" name="9" value="9-4"> Fairly often</li>
+                            <li><input type="radio" name="9" value="9-5"> Very often</li>
+                        </ul>
                     </form>
                     <h5>In the last month, how often have you felt difficulties were piling up so high that
                             you could not overcome them?</h5>
                     <form>
-                        <input type="radio" name="10" value="10-1"> Never
-                        <input type="radio" name="10" value="10-2"> Almost never
-                        <input type="radio" name="10" value="10-3"> Sometimes
-                        <input type="radio" name="10" value="10-4"> Fairly often
-                        <input type="radio" name="10" value="10-5"> Very often
+                        <ul>
+                            <li><input type="radio" name="10" value="10-1"> Never</li>
+                            <li><input type="radio" name="10" value="10-2"> Almost never</li>
+                            <li><input type="radio" name="10" value="10-3"> Sometimes</li>
+                            <li><input type="radio" name="10" value="10-4"> Fairly often</li>
+                            <li><input type="radio" name="10" value="10-5"> Very often</li>
+                        </ul>
                     </form>
                     <br>
-                    <button onclick="stressCalc()">Find out your stress level!</button>
+                    <div class="button">
+                        <button onclick="stressCalc()">Find out your stress level!</button>
+                    </div>
                     <p id="x"></p>
                     <p id="y"></p>
         
