still working, prepare for reset

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -107,6 +107,12 @@
                 <p id="get87"></p>
                 <p id="get83"></p>
                 <p id="get80"></p>
+                <p id="get77"></p>
+                <p id="get73"></p>
+                <p id="get70"></p>
+                <p id="get67"></p>
+                <p id="get63"></p>
+                <p id="get60"></p>
 
     
                 <div style="display:none" id="texttoshow">
