removed id tags/finalized js part with letter

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -90,13 +90,19 @@
 
                 <h4>Class Name:</h4>
                 <input type="text" id="className" value="">
-                <h4>Category 1 Grade & Weight:</h4>
-                <input id="g1" name="grayed" value=""> <input id="p1" name="percy" value="">
-                <h4>Category 2 Grade & Weight:</h4>
-                <input id="g2" name="grayed" value=""> <input id="p2" name="percy" value="">
-                
-                <h4>Final Weight (Optional):</h4>
-                <input id="finalex" value="">
+                <br>
+                <br>
+                <h4>Exam/HW 1 Grade & Weight:</h4>
+                <input name="grayed" value=""> % & <input id="p1" name="percy" value=""> %
+                <br>
+                <br>
+                <h4>Exam/HW 2 Grade & Weight:</h4>
+                <input name="grayed" value=""> % & <input id="p2" name="percy" value=""> %
+                <br>
+                <br>
+                <h4>Next Assignment Weight (Optional):</h4>
+                <input id="finalex" value=""> %
+                <br>
                 <br>
                 <br>
                 <button onclick="gradeCalc()">Calculate!</button>
