fix head problem

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Coll[A]ge</title>
@@ -11,17 +10,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style-bs.css" rel="stylesheet">
-=======
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coll[a]ge</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="style-bs.css" rel="stylesheet">
->>>>>>> 25ef9ba6cb2da47b776c4cc76fd3cbe29046ea46
 </head>
 <body>
 
@@ -40,7 +28,7 @@
                         <a class="nav-link" href="./home-bs.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
+                        <a class="nav-link" href="./page1-bs.html">Grade Calculator</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
@@ -65,10 +53,9 @@
         <div class="container-fluid padding">
         <div class="row welcome text-center padding">
             <div class="col-12">
-                <h1 class="display-4">GPA Calculator</h1>
+                <h1 class="display-4">Grade Calculator</h1>
             </div>   
-            <p class="lead"> Input your score in the given function and it wil calculate the how much percent 
-                    you need for your next exam in order to get your desired score!</p>
+            <p class="lead"> Input your score in the given function and it wil calculate your current grade and how well you need to do on your next exam in order to get your desired score!</p>
         </div>
         <hr class="light">
         </div>
@@ -78,7 +65,7 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>How to use this GPA Calculator!</h2>
-                <p>Input the relevant info into the fields bellow to find out your current grade as well as what you need on your next assignemnet to get your desired grade! Please input numbers greater than 0 and input percentages out of 100.</p>
+                <p>Input the relevant info into the fields below - Please input numbers greater than 0 and input percentages out of 100.</p>
                     <hr class="light">
             </div>   
         </div>
