--- a/home-bs.html
+++ b/home-bs.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="./home-bs.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
+                        <a class="nav-link" href="./page1-bs.html">Grade Calculator</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
