--- a/page2-bs.html
+++ b/page2-bs.html
@@ -16,7 +16,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Coll[a]ge</a>
+            <a class="navbar-brand" href="#">Coll[A]ge</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="./home-bs.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
+                        <a class="nav-link" href="./page1-bs.html">Grade Calculator</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
