--- a/home-bs.html
+++ b/home-bs.html
@@ -55,7 +55,10 @@
             <div class="col-12">
                 <h1 class="display-4">Coll[A]ge: A Collage for College</h1>
             </div>   
-            <p class="lead"> Are you a stressed, disorganized college student? Have you ever wanted to make your life more structured? Do you want to get your act together? Coll[A]ge is a website made specifically for college students to stay organized and manage their stress levels. Like a jack-of-all-trades, Coll[A]ge provides users with intel on how to calculate their grades, a test to monitor stress levels, tips on surviving college, and more!</p>
+            <p class="lead"> Are you a stressed, disorganized college student? Have you ever wanted to make your life more structured? 
+                            Do you want to get your act together? Coll[A]ge is a website made specifically for college students to stay 
+                            organized and manage their stress levels. Like a jack-of-all-trades, Coll[A]ge provides users with intel on 
+                            how to calculate their grades, a test to monitor stress levels, tips on surviving college, and more!</p>
         </div>
         <hr class="light">
         </div>
@@ -65,7 +68,9 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>Why Coll[A]ge?</h2>
-                <p>We at Coll[A]ge know how stressful it is being a fulltime student as well as managing one's social life and other activities. Our goal is to reduce as much stress on students as we can and add organization to students' lives. Explore the site to find out more about Coll[A]ge!</p>
+                <p>We at Coll[A]ge know how stressful it is being a fulltime student as well as managing one's social life and other activities. 
+                    Our goal is to reduce as much stress on students as we can and add organization to students' lives. Explore the site to find 
+                    out more about Coll[A]ge!</p>
                     <hr class="light">
             </div>   
         </div>
@@ -96,7 +101,7 @@
                 <div class="card">
                     <img class="card-imd-top" src="alina.png">
                     <div class="card-body">
-                        <h4 class="card-title">Alina</h4>
+                        <h5 class="card-title">Alina</h5>
                         <p class="card-text">Hi my name is Alina and I'm a sophomore attending University of Massachusetts
                             Amherst!
 
@@ -108,7 +113,7 @@
                     <div class="card">
                         <img class="card-imd-top" src="alex.png">
                         <div class="card-body">
-                            <h4 class="card-title">Alex</h4>
+                            <h5 class="card-title">Alex</h5>
                             <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University!
                             </p>
                         </div>
@@ -118,7 +123,7 @@
                     <div class="card">
                         <img class="card-imd-top" src="nathan.png">
                         <div class="card-body">
-                            <h4 class="card-title">Nathan</h4>
+                            <h5 class="card-title">Nathan</h5>
                             <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts
                                 Amherst!
                             </p>
