--- a/page2-bs.html
+++ b/page2-bs.html
@@ -81,6 +81,7 @@
                 <div class="para_stress">
         
                     <h2>See how stressed you are using this stress calculator!</h2>
+                    <hr class="light">
 
                     <h5>In the last month, how often have you been upset because of something that 
                         happened unexpectedly?</h5>
@@ -93,6 +94,7 @@
                             <li><input type="radio" name="1" value="1-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you felt that you were unable to control the
                         important things in your life?</h5>
                     <form>
@@ -104,6 +106,7 @@
                             <li><input type="radio" name="2" value="2-5"> Very Often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you felt nervous and stressed?</h5>
                     <form>
                         <ul>
@@ -125,6 +128,7 @@
                             <li><input type="radio" name="4" value="4-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you felt that things were going your way?</h5>
                     <form>
                         <ul>
@@ -135,6 +139,7 @@
                             <li><input type="radio" name="5" value="5-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you found that you could not cope with
                             all the things that you had to do?</h5>
                     <form>
@@ -146,6 +151,7 @@
                             <li><input type="radio" name="6" value="6-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you been able to control irritations in
                         your life?</h5>
                     <form>
@@ -157,6 +163,7 @@
                             <li><input type="radio" name="7" value="7-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you felt that you were on top of things?</h5>
                     <form>
                         <ul>
@@ -167,6 +174,7 @@
                             <li><input type="radio" name="8" value="8-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you been angered because of things that
                             happened that were outside of your control?</h5>
                     <form>
@@ -178,6 +186,7 @@
                             <li><input type="radio" name="9" value="9-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5>In the last month, how often have you felt difficulties were piling up so high that
                             you could not overcome them?</h5>
                     <form>
