shortened the bars manually

--- a/page2-bs.html
+++ b/page2-bs.html
@@ -117,6 +117,7 @@
                             <li><input type="radio" name="3" value="3-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <h5> In the last month, how often have you felt confident about your ability to handle
                         your personal problems?</h5>
                     <form>
@@ -198,6 +199,7 @@
                             <li><input type="radio" name="10" value="10-5"> Very often</li>
                         </ul>
                     </form>
+                    <hr class="light">
                     <br>
                     <div class="button">
                         <button onclick="stressCalc()">Find out your stress level!</button>
