changed backgrounds on css and renamed each headers

--- a/page2-bs.html
+++ b/page2-bs.html
@@ -43,7 +43,7 @@
 
         <!--- Image-->
        
-        <header>
+        <header class="header2">
 
         </header>
             
@@ -57,7 +57,7 @@
                 <p class="lead"> The Perceived Stress Scale (PSS) is a classic stress assessment instrument which measures personal stress and 
                     helps us understand how different types of situations affect our emotion. The following questions, adapted from the State of
                     New Hampshire, EAP, will ask about your feelings and thoughts during your last month. The number you receive from this calculator
-                    is your PSS.
+                    is your PSS value.
                 </p>
             </div>
             <hr class="light">
