--- a/page1-bs.html
+++ b/page1-bs.html
@@ -130,8 +130,7 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <hr class="light">
-                    <h5>&copy; Created by Alina, Jin Young (Alex) and Nathan</h5>
+                    <h6>&copy; Coll[A]ge</h6>
                 </div>
             </div>
             </div>
