minor edits on footer

--- a/page2-bs.html
+++ b/page2-bs.html
@@ -381,7 +381,8 @@
                     </script>
                 </div>
             </section>
-
+        
+        <!--- Footer -->
         <footer>
             <div class="container-fluid padding">
             <div class="row text-center">
