--- a/page3-bs.html
+++ b/page3-bs.html
@@ -73,6 +73,11 @@
                             <p> Don't skip class!</p>
                             <p> Get enough sleep!</p>
                             <p> Ask your friends, classmates, professors, or other for help when needed!</p>
+                            <p> Watch your health!</p>
+                            <p> Excerise!</p>
+                            <p>Don't pay full price for items. Looks for coupons!</p>
+                            <p> Stay safe!</p>
+                            <p>Stay organized!</p>
                         </div>
                     </div>
                     <hr class="light">
