--- a/page2-bs.html
+++ b/page2-bs.html
@@ -55,7 +55,7 @@
                     <h1 class="display-4">Stress Calculator</h1>
                 </div>   
                 <p class="lead"> The Perceived Stress Scale (PSS) is a classic stress assessment instrument which measures personal stress and 
-                    helps us understand how different types of situations affect our emotion. The following questions, adapted from the State of
+                    helps us understand how different types of situations affect our emotions. The following questions, adapted from the State of
                     New Hampshire, EAP, will ask about your feelings and thoughts during your last month. The number you receive from this calculator
                     is your PSS value.
                 </p>
@@ -68,8 +68,7 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>How to use the Stress Calculator</h2>
-                <p>Answer all the questions below and submit your answer. It will then return your PSS value, and will determine whether if you are
-                    stressed or not. The best approacj to the PSS assessment is to answer the questions relatively quickly and treat each question
+                <p>Answer all of the questions below and submit your answer. It will then return your PSS value, and will determine your level of stress. The best approach to taking the PSS assessment is to answer the questions relatively quickly and treat each question
                     separately.
                 </p>
                     <hr class="light">
