--- a/page3-bs.html
+++ b/page3-bs.html
@@ -75,7 +75,7 @@
                             <p> Ask your friends, classmates, professors, or other for help when needed!</p>
                             <p> Watch your health!</p>
                             <p> Excerise!</p>
-                            <p>Don't pay full price for items. Looks for coupons!</p>
+                            <p>Don't pay full price for items. Look for coupons!</p>
                             <p> Stay safe!</p>
                             <p>Stay organized!</p>
                         </div>
