edits to grade calc

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -71,25 +71,25 @@
         </div>
 
         <section id="JavaScript Test">
-            <div class="para">
+            <div class="para_grade">
 
 
-                <h4>Class Name:</h4>
+                <h5>Class Name:</h5>
                 <input type="text" id="className" value="">
                 <br>
                 <br>
-                <h4>Exam/HW 1 Grade & Weight:</h4>
+                <h5>Exam/HW 1 Grade & Weight:</h5>
                 <input name="grayed" value=""> % & <input id="p1" name="percy" value=""> %
                 <br>
                 <br>
-                <h4>Exam/HW 2 Grade & Weight:</h4>
+                <h5>Exam/HW 2 Grade & Weight:</h5>
                 <input name="grayed" value=""> % & <input id="p2" name="percy" value=""> %
                 <br>
                 <br>
-                <h4 id="newgrades"></h4>
+                <h5 id="newgrades"></h5>
                 <button onclick="myFunction()">Add Another Class</button>
 
-                <h4>Next Assignment Weight (Optional):</h4>
+                <h5>Next Assignment Weight (Optional):</h5>
                 <input id="finalex" value=""> %
                 
                 <br>
