changes in js and formatting on gpa calc

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -74,18 +74,13 @@
             <div class="para_grade">
 
 
-                <h5>Class Name:</h5>
-                <input type="text" id="className" value="">
+                <h5>Class Name:
+                <input type="text" id="className" value=""></h5>
                 <br>
-                <br>
-                <h5>Exam/HW 1 Grade & Weight:</h5>
-                <input name="grayed" value=""> % & <input id="p1" name="percy" value=""> %
-                <br>
-                <br>
-                <h5>Exam/HW 2 Grade & Weight:</h5>
-                <input name="grayed" value=""> % & <input id="p2" name="percy" value=""> %
-                <br>
-                <br>
+                <h5>Exam/HW 1 Grade & Weight:
+                <input name="grayed" value=""> % & <input id="p1" name="percy" value=""> %</h5>
+                <h5>Exam/HW 2 Grade & Weight:
+                <input name="grayed" value=""> % & <input id="p2" name="percy" value=""> %</h5>
                 <h5 id="newgrades"></h5>
                 <button onclick="myFunction()">Add Another Class</button>
 
