--- a/page3-bs.html
+++ b/page3-bs.html
@@ -67,7 +67,8 @@
             <div class="col-lg-12">
                 <h2>Tips?</h2>
                     <div class="container">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7pJJZ3bKCrqhb_jGY2c6u9Ms8BW_zXQY1BUl9i7bdKTwgul098g" alt="uh oh" class="image">
+                    <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7pJJZ3bKCrqhb_jGY2c6u9Ms8BW_zXQY1BUl9i7bdKTwgul098g" alt="uh oh" class="image">-->
+                    <img src="sun.png" alt="uh oh" class="image">
                     <div class="middle">
                         <div class="text">
                             <p> Don't skip class!</p>
