--- a/page3-bs.html
+++ b/page3-bs.html
@@ -68,7 +68,7 @@
                 <h2>Tips?</h2>
                     <div class="container">
                     <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7pJJZ3bKCrqhb_jGY2c6u9Ms8BW_zXQY1BUl9i7bdKTwgul098g" alt="uh oh" class="image">-->
-                    <img src="sun.png" alt="uh oh" class="image">
+                    <img src="photos/sun.png" alt="uh oh" class="image">
                     <div class="middle">
                         <div class="text">
                             <p> Don't skip class!</p>
