re-edited photos and footer for all pages

--- a/home-bs.html
+++ b/home-bs.html
@@ -99,7 +99,7 @@
         <div class="row padding">
             <div class="col-md-4">
                 <div class="card">
-                    <img class="card-imd-top" src="alina.png">
+                    <img class="card-imd-top" src="photos/alina.png">
                     <div class="card-body">
                         <h5 class="card-title">Alina Daraphet</h5>
                         <p class="card-text">Hi I'm Alina and I'm a sophomore attending University of Massachusetts Amherst! I'm the Project Manager for Coll[a]ge and focused on front-end and design using HTML and CSS. 
@@ -110,7 +110,7 @@
             </div>
             <div class="col-md-4">
                     <div class="card">
-                        <img class="card-imd-top" src="alex.png">
+                        <img class="card-imd-top" src="photos/alex.png">
                         <div class="card-body">
                             <h5 class="card-title">Jin Young (Alex) Bang</h5>
                             <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University! I worked on back-end and front-end for Coll[a]ge using HTML, CSS, and JavaScript.
@@ -120,7 +120,7 @@
                 </div>
             <div class="col-md-4">
                     <div class="card">
-                        <img class="card-imd-top" src="nathan.png">
+                        <img class="card-imd-top" src="photos/nathan.png">
                         <div class="card-body">
                             <h5 class="card-title">Nathan Ng</h5>
                             <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts Amherst! I worked on back-end for Coll[a]ge using JavaScript and assisted in HTML.
