--- a/page1-bs.html
+++ b/page1-bs.html
@@ -126,15 +126,10 @@
         
 
         <!--- Footer -->
-        <footer>
-            <div class="container-fluid padding">
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <h6>&copy; Coll[A]ge</h6>
-                </div>
-            </div>
-            </div>
-        </footer>
+        <div class="footer">
+            <h6>&copy; Created by Coll[A]ge</h6>
+            </p>
+        </div>
 
 </body>
 </html>
