alot of changes to everything in general

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -85,13 +85,12 @@
                 <br>
                 <h5 id="newgrades"></h5>
                 <button onclick="myFunction()">Add Another Class</button>
+                <hr class="light">
 
                 <h5>Next Assignment Weight (Optional):</h5>
                 <input id="finalex" value=""> %
+                <hr class="light">
                 
-                <br>
-                <br>
-                <br>
                 <button onclick="gradeCalc()">Calculate!</button>
                 
                 <p id="theClass"></p>
