--- a/home-bs.html
+++ b/home-bs.html
@@ -102,7 +102,8 @@
                     <img class="card-imd-top" src="photos/alina.png">
                     <div class="card-body">
                         <h5 class="card-title">Alina Daraphet</h5>
-                        <p class="card-text">Hi I'm Alina and I'm a sophomore attending University of Massachusetts Amherst! I'm the Project Manager for Coll[a]ge and focused on front-end and design using HTML and CSS. 
+                        <p class="card-text">Hi I'm Alina and I'm a sophomore attending University of Massachusetts 
+                            Amherst! I'm the Project Manager for Coll[A]ge and focused on front-end and design using HTML and CSS. 
 
                         </p>
                     </div>
@@ -113,7 +114,8 @@
                         <img class="card-imd-top" src="photos/alex.png">
                         <div class="card-body">
                             <h5 class="card-title">Jin Young (Alex) Bang</h5>
-                            <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University! I worked on back-end and front-end for Coll[a]ge using HTML, CSS, and JavaScript.
+                            <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University! 
+                                I worked on back-end and front-end for Coll[A]ge using HTML, CSS, and JavaScript.
                             </p>
                         </div>
                     </div>
@@ -123,7 +125,8 @@
                         <img class="card-imd-top" src="photos/nathan.png">
                         <div class="card-body">
                             <h5 class="card-title">Nathan Ng</h5>
-                            <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts Amherst! I worked on back-end for Coll[a]ge using JavaScript and assisted in HTML.
+                            <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts Amherst! 
+                                I worked on back-end for Coll[A]ge using JavaScript and assisted in HTML.
                             </p>
                         </div>
                     </div>
