--- a/page1-bs.html
+++ b/page1-bs.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./page3-bs.html">College Tips</a>
                     </li>    
+                    <li class="nav-item">
+                        <a class="nav-link" href="./page4-bs.html">Anxiety</a>
+                    </li> 
 
                 </ul>
             </div>
