--- a/page1-bs.html
+++ b/page1-bs.html
@@ -66,7 +66,7 @@
         <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-lg-12">
-                <h2>How to use this GPA Calculator!</h2>
+                <h2>How to use this Grade Calculator!</h2>
                 <p>Input the relevant info into the fields below - Please input numbers greater than 0 and input percentages out of 100.</p>
                     <hr class="light">
             </div>   
